# indoor_perception

./: .gitignore  DEMO_GUIDE.md  README.md  VISUALIZATION_FEATURES.md  pyproject.toml
.claude/: settings.local.json
examples/: basic_usage.py
scripts/: demo.py  download_nyu_samples.py  download_real_samples.py  download_sample.py  run_image_folder_pipeline.py  run_pipeline.py  run_sam2_auto_masks.py  visualize_image_folder_results.py  visualize_results.py
src/indoor_perception/: __init__.py  pipeline.py  visualizer.py
src/indoor_perception/dataset/: __init__.py  base.py  downloader.py  image_folder.py  real_samples.py  scannet.py
src/indoor_perception/io/: __init__.py  ply_writer.py
src/indoor_perception/projection/: __init__.py  projector.py
src/indoor_perception/segmentation/: __init__.py  model.py  sam2_model.py
tests/: __init__.py  conftest.py  test_dataset.py  test_io.py  test_pipeline.py  test_projection.py  test_segmentation.py  test_visualizer.py
